--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/techmonk.png" class="work__image" alt="Project 1" />
+              <img src="./images/techmonk.PNG" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -205,7 +205,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/kashan-anis.jpg" alt="" />
           </div>
         </div>
       </div>
