--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </div> 
             </div>
             <div class="work__image-box">
-              <img src="./images/tog.png" class="work__image" alt="Project 3" />
+              <img src="./images/progress.jpg" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
